# ChangeLog for dev-perl/IO-Socket-SSL
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Socket-SSL/ChangeLog,v 1.217 2015/01/31 13:32:25 zlogene Exp $

  31 Jan 2015; Mikle Kolyada <zlogene@gentoo.org> IO-Socket-SSL-1.967.0.ebuild:
  alpha/ia64/sparc stable wrt bug #535200

  26 Jan 2015; Agostino Sarubbo <ago@gentoo.org> IO-Socket-SSL-1.967.0.ebuild:
  Stable for x86, wrt bug #535200

  18 Jan 2015; Agostino Sarubbo <ago@gentoo.org> IO-Socket-SSL-1.967.0.ebuild:
  Stable for ppc64, wrt bug #535200

  17 Jan 2015; Markus Meier <maekke@gentoo.org> IO-Socket-SSL-1.967.0.ebuild:
  arm stable, bug #535200

  17 Jan 2015; Agostino Sarubbo <ago@gentoo.org> IO-Socket-SSL-1.967.0.ebuild:
  Stable for ppc, wrt bug #535200

  13 Jan 2015; Jeroen Roovers <jer@gentoo.org> IO-Socket-SSL-1.967.0.ebuild:
  Stable for HPPA (bug #535200).

  09 Jan 2015; Agostino Sarubbo <ago@gentoo.org> IO-Socket-SSL-1.967.0.ebuild:
  Stable for amd64, wrt bug #535200

*IO-Socket-SSL-1.998.0 (22 Sep 2014)

  22 Sep 2014;  <patrice@gentoo.org> +IO-Socket-SSL-1.998.0.ebuild:
  Version bump to 1.998. See 519156.

  06 Jun 2014; Mike Frysinger <vapier@gentoo.org> IO-Socket-SSL-1.953.0.ebuild:
  Mark arm64/m68k/s390/sh stable.

  23 Feb 2014; Mikle Kolyada <zlogene@gentoo.org> -IO-Socket-SSL-1.440.0.ebuild,
  -IO-Socket-SSL-1.810.0.ebuild, -IO-Socket-SSL-1.820.0.ebuild,
  -IO-Socket-SSL-1.830.0.ebuild, -IO-Socket-SSL-1.840.0.ebuild,
  IO-Socket-SSL-1.953.0.ebuild:
  ppc stable wrt bug #492178; Drop old.

  23 Feb 2014; Mikle Kolyada <zlogene@gentoo.org> IO-Socket-SSL-1.953.0.ebuild:
  ppc64 stable wrt bug #492178

  23 Feb 2014; Mikle Kolyada <zlogene@gentoo.org> IO-Socket-SSL-1.953.0.ebuild:
  sparc stable wrt bug #492178

  23 Feb 2014; Mikle Kolyada <zlogene@gentoo.org> IO-Socket-SSL-1.953.0.ebuild:
  x86 stable wrt bug #492178

  22 Feb 2014; Mikle Kolyada <zlogene@gentoo.org> IO-Socket-SSL-1.953.0.ebuild: