@@ -4,17 +4,29 @@ Hash: SHA256
 DIST IO-Socket-SSL-1.953.tar.gz 89807 SHA256 4fa57c9385999e942a1f296b9f45c387a78bccb40db574585b38a9da5736a3d1 SHA512 062a75b44dc4075d64412c22dbab28b8cccc4b396bb3a18eb8c5b27b44853cec89f34cea0b82226070fc3b0a68ede00c9d5117f89e0b6e9ffc9322afa55cae94 WHIRLPOOL 390d3db13d0243344106793ddfd2ffbed128243658d7150aeb45141c96b141d1f773a4e2ae4c8e48ee17d94b6386e6f1b2effc28b41f220712e58820b252cad8
 DIST IO-Socket-SSL-1.967.tar.gz 97036 SHA256 d9ee42bf667ac92732e8c35d3930757fad6b8996d24a5e5b8eeb6250ba411299 SHA512 4705fa2d641030ad10d5d2f7e1a7aecac6da8b06c3b19c13c3c8d1396a91332e829c3d211a29d3db2d8d1db57d413a03db90df43f231169be335fcc728e28358 WHIRLPOOL 03c3d6e15b9a3c6808d94d27fc53bc6960ea0e2d68cc2d3689a1cd587b8aaacb3092146254deb0386e2608463e0535fced7c7ddffeb3eb3bded00442a74b497e
 DIST IO-Socket-SSL-1.998.tar.gz 187327 SHA256 73c976ec288341f5ab30305590658b563a91f1af1ec3c3f531adbb434741711c SHA512 5faab280ab2d7ecef348ce70382302d482478aacb6e3e3d36b8c805e4d4446bbc924ea257c039f76be16f1fc29ff1f832d67bc4a7ed1bc535e329179c3ac6148 WHIRLPOOL b43b3f4f536583c63eb9f89761c341cd62e32cd2b6bd518d7a0831076b0b7145e97e10b296290205c9394bcbb17eae196c91e7e66d31d54e65faff4cf6d910e1
+DIST IO-Socket-SSL-2.012.tar.gz 193636 SHA256 02bd7f17ceb492e396eca6627f50aaa2a3ddfcb5bfa3889ddf145383b0b179d9 SHA512 b77e89ec83ff78e59d8f11fde9f268ae47cc1a090338c3d17855cb6043120b9ce29867e297e5b7b83c0c98af37b9672826748b21f75dea50beecc7deb5a9f1ae WHIRLPOOL 4d4464c9807ed1a971c6aca7663130de2ee0df37af88ee5cada7fff43f0eb8d211e5a3afb3c33c37d2d46c2852718bdd83266a60e04298a32ea9494dc3df30ac
 EBUILD IO-Socket-SSL-1.953.0.ebuild 876 SHA256 b0285b9db6e589e1f5dfa357d0b31e5e9315abccd7270c271b8f16867d570b77 SHA512 0c1b295ba6f2c54a544c33b6461b08b5897fc16078726ac6e0ac12f1072cfcff4d4ebb8e18ac152be2e103f115f0ab2591e37b0c80419c07ed36eb7e6ad1c3f9 WHIRLPOOL a9dd054dc790628766bcecc136c1076df3ef291a651109cc3a8aac464674a1b1d0381a52ae45dd8ce1c4997467578b43bd37db91e99529ae3cc296f75d23650f
 EBUILD IO-Socket-SSL-1.967.0.ebuild 880 SHA256 2b9988987e62429007dfab8fcead559decde341f539f093cdb76a29ba8215a69 SHA512 79fc9a704fe2feda1e54637a26a966e092077b692126872f6dd757e758f06cd0a9eb3da70633fc6e337daf103606efebd6baa23b62a6f7299b1a8778fc54e1c2 WHIRLPOOL dd82da84c5f53d70476a11c2e63ed72bbf5b94b3c1bf5338f5690c62197bff520087b989f44476d4375364a45b049871af3a7194b6f6add5a6d026e95cc0ca39
 EBUILD IO-Socket-SSL-1.998.0.ebuild 891 SHA256 a5e38553be2b10421ec415c7f15ac6854af81f202f423d20fa466f4ee3839e2a SHA512 eecee54977dc8e9c6a5d353cbc00258b2ab8e4dbdb7cd87cd0e6ea47941cc1f493e5e175b37624c4f5b8d2609c8d4273f52513b82f7060d8504e4d999b945cd8 WHIRLPOOL 2e5d421491b981ddfcd0311abc8bf0ae405490e9ea457b49811f2e1891595776ae3e7f8c0a5d3659a991b5f58973bc9180229d0201b11313db5e26c51a3ab5d3
-MISC ChangeLog 27005 SHA256 0e15bfae7469b0b5762a62fdeb0a224845e9863dbcb2732138b57acdaec99d45 SHA512 f943e7e5aff7ffcff3b312e2f38120aaa444509ea5e80fa8fec4f5e7e906d04b01cafae0431a1ee95af6a3fe86008b117a33491450472caee627d626d230decd WHIRLPOOL 463a336d2bdd5b0e81c873cedc3446f73a7a3965d43e01a3e8473bbff88e2b2c4fa9d3fed4662a52bbe15e901887a120145be2116cce3ba93a1b0521821e466b
+EBUILD IO-Socket-SSL-2.12.0.ebuild 925 SHA256 95eb472cacb18e1de7cf730ab03ab078221cf4672be97b59f51f304ddd0427d3 SHA512 928a31e1400e2d74f90d0030143158ad176ed1e15b89581d81475e69d1549be1c21d5650d44c053d2307289a207507ef985896fabee788c527f3bf1f27ebaa2d WHIRLPOOL 2a5f980d3c4ba9291d9b2ece55660266f10ae6410e5bc5a52ca28e1794cf8575bc1ae7c9f045b5824bd96fa6fdd39b58852c2d4d8650e9ec941053e944aca605
+MISC ChangeLog 27149 SHA256 84cb8ac2673f83a2a830774bea59a2386eb7d5ad542f1b9730e43e5bd907fcdb SHA512 7f6e09fa036867c7d3e82631e03148358942d7d87c4a0b83f8eec2a51e2480af3432c30e940fac70bbcf76107393c0a79845430c9a9891ab121f148b41ec6307 WHIRLPOOL 8f3cbc15bc84af3965e3db4c58705e1ed8bfbac5de17e9693b16da68aa30ba203c196220f9066a9b6e6db5b97b4fa12b792e684565395d5d0c817fb2cf7b6b15
 MISC metadata.xml 527 SHA256 fe0b7ca5e1952479604eda183d6005129d6f13365861e415e9501de327e3ef74 SHA512 3e556e06e6ee6766581f59c43f72d3aae371234613b26c2d921ae24e89669e10f28c7fdd28d7b23ead713cbc5e5c77f6bb9c65e12f13258c849f019a2c86d751 WHIRLPOOL 150c0215ba6c0d01f0f3e2fa80f79ce06dd27739ca86c2f5d6df21391e357959198aac051e33397559b30b5fdb10baeb40214a084e7e78151f139b3093ae4b8c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iJwEAQEIAAYFAlTM2QgACgkQG9wOWsQutdbDvAP/asHXa3S4KHQZK5pcpi7T+hWY
-EkBmR6fXswU+/sc+EmgwVYFqC3jWD++0ftgmoCNc9rJPBl84HkVGDjt0EwFPpucu
-qWXw9t/uMsm6umit1I+NreX+3/b2CjrdcCFrHe04s+/1FZhj0zazUxjVfh6W+AM3
-WTTpvDPpaEGgF4aptTU=
-=Y2pP
+iQJ8BAEBCABmBQJU67tkXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
+QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcpI0P/1tPLmXtkPpDp64CJqVfm2Ue
+0llJRB+EVwXCQCLTpMwfLiO1BrAe8nfuCTfsjL3DXFXDBl93uViMphQ2KDFEsSWc
+nNXCIas6aAcpNSG/W/F2tbd0O3h9domix6EJRQZ+LX+dJlatEPG5SLAdi9ohqNAo
+o2nTwAizRrKHDOWVV7dqxdC/FQY7m4k8qfvh3vQQ+3VEbFfzMNeft6+uE0/l3S+h
+N05UwJEtYWjCDjYwvQbbmX76lt3Tbf1PVufQp76W9ZQa6QGctR1uYItmhvr42jsj
+rn9cwvqw7ncFjdhz/4AlhsTLLD0fqq0CIdzJp3FtLUTZzn/NDO4PS37rz/wYJA+5
+zn3e2V1CfmVEnib748dop4X2rtTa77/IsNdlszglH9NFWHuhlQZ3RPsw69D/Cql8
+A0o6PPSCZC+TxalmsglPStfmkUzglyM2ZfJmn+VjAROzryHvPpl4gL6FZK+UE3js
+hdedLNatOtIMoqNFB6hGfHihxgb2eoc1zTUyBIfL0DsQEt1xBe68L1i0fYOjtmxK
+0NjjLO7cTVqZ/ybXOVcloAqHDKa8uVNDF7fX0bha6hpp7bX3buT5LyGPjjXcIomY
+xdZcMQ9Rc6swTAw58beHcmcH++IlISb3ndEE4Yxvxky8G7TxE3RfuKs3x6IRBjB4
+MI2Vwh9K2DpVzBD7ihmZ
+=UpEe
 -----END PGP SIGNATURE-----
