@@ -2,15 +2,27 @@
 Hash: SHA256
 
 DIST Net-Twitter-4.00006.tar.gz 126439 SHA256 cf1caaad7b6b5d5fa9abe98bbc2fb88625cdd9a9081ad60cc1e7ffb741b205e9 SHA512 746a4673a10758e9c3c250814d70834f8bd3517185b4790ce047e74a7acd81754eba13dceeada1feb3ca8d2d77a7343cdd24566f18f96e65e77e3e731fb60395 WHIRLPOOL 2dfb567df9e7fcf852d0333cefa725f1678a46bef7f17853c6a534d7a41882e6ff871466dd876da86629e430a12e974917ff10f7ad211ff4f4054dc794cca911
+DIST Net-Twitter-4.01008.tar.gz 129953 SHA256 3c42d3bd61d0850e86e65d1b144fdf137034a6ba509b1a6fb18641381ff85a25 SHA512 7fe7c68f0c8926f398c120ed3ed15e2aba69ec123495eec1fe7b517da7f60f5d192e6f682ee5d36b70ccf0ea55824318b9d74e4add261c93083fcca080d83c65 WHIRLPOOL 5bdea6922ed726a045b5da2e7c6987913f4dcfaa0e81b575a2665a0deaf9d55a2bd7bf6f2940fca8269a5a7d6f186be9f5ee033c207e712fd263b6cdb4c993cb
 EBUILD Net-Twitter-4.000.60-r1.ebuild 1003 SHA256 59651a7577b77a01e70e3caa12eebbb2824eb8c9d96140d88c6a44d87d4467e7 SHA512 bfd7da29a8857ab02c90dd74791b088b055bb7a5fe97306cdd9d29aca8a89b8f761d15b4d43df4aea0e9641080db28ef768fb57987c58d0dfa9f28a91616b474 WHIRLPOOL 97548300e89839b3004d465a6de634bd1387e83d80c0d2a3c082f866dfb24a8bd5eaf1986695467b54c57976f162faaa784fa988f1dd446816cd75589edfe63d
-MISC ChangeLog 6800 SHA256 994fcba9fc37357c6c09ab394d3c58478da37a19ec341db28af8a38de6dbbbef SHA512 c2a5b7c7b71eb6b61fba0b506df39c3fb74f5df7ed9c765cec0738b902fbe48ff6b46d51d64c89f025a7794be0f064569159721178c2acc99b9c35111cf5dfbe WHIRLPOOL a8ee6c2306f817b2fe322a69944c863c236b9da8d33830651956ca8c19a2033763f5bc501701a64b685d4fcb6607c7f765f62c11abdd1b270b3fdc5f7f1cb68a
+EBUILD Net-Twitter-4.10.80.ebuild 1263 SHA256 48cab519b7a0a0bc67e77cbca9e5270abddb31b9e3195a23c831420fd8222647 SHA512 278d9e8e2282a87d71bf62c1c1f92e9199267feb9b3bdf3a20f675f2cd77b72e27bd78d4b3796e6ab95c91a16dd7f92e0b17b0bb09ddb384d0a8d8bb01578d90 WHIRLPOOL 35f52744ef82f8a7911ac7efe4fdedd19c9a68994ca04b3a00556e82a3aa6d4dde6f16b291723c1b634507ac61a9cc8e092a408e011621be64143f42d7efd2d2
+MISC ChangeLog 6942 SHA256 271a42ebc0d676d72121f7fb0309a8fed9f3555250ef21f86162c4cad591111f SHA512 3b7215ed9a7442348eb19f8d5296afc674da66b8bfd44a878c67240704c1d89a22753860e13960d3757cd96283f33d92cee74c22aa1694767fc719a3102fe236 WHIRLPOOL cf866e61f0b88a728625adea1f5b49cc3ca76c0d12dcf68d731684b86d257de4cb646bb26cc7c1f609809484a53800c57e4918d04698e54fd4fda17481291f07
 MISC metadata.xml 1853 SHA256 2bb5557f545282b4c39857c2be1a1697b5cedb3251064517a77f9a4af5a08693 SHA512 cd310ed7ea1423df94b745aaeffc2ee5ff8cc534321c57e59dfcc7f625ce6a4727644bc647372bbbaea518967fde2d183cf49405a441bd31e2a3c55775f52a29 WHIRLPOOL b02aa06fd5619e8b75d10ee96b52f7fdfffe8203cd7b78844ba39aaf87f3a0429dd633bab152b20f2620d0a4cf58ead496835d6ccd6720c9f1f9407dee33b477
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iJwEAQEIAAYFAlQ/o5QACgkQG9wOWsQutdY9bQQAik3Dy77E6HZM/mAspgdu6bLp
-ullUU3D1jQTmG1HnUBn4xVhpdLHKOBMGXqm6TeFxST3NlHWFCcfFJrc8mvjB3rYm
-E3rI75zCL3ACvCugXegpXLkAG0eV1mzMUYYDIy2ySmhVT7kuFZBV+y45EnO4ET9/
-fTom6h/2ECO675+JVF4=
-=sLXG
+iQJ8BAEBCABmBQJU67uKXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
+QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcpTAP/RvxkxK1u7WBeeI49MaYwGNz
+H6H3As5FdYW2oSNIdFN01dD8CN+xezAj3oHSr3QkPzVavETX8mgvsxmn4mHjJl8G
+VaH6UkIn7WTAT+mnQLjsy9v3pvs/jC1qf0RNr+06rkxMcpbqOBJH7gzcVx21Ftvc
+cTAO24L3sSz3uiiAlr0VEVhfWm4OK1ljwHbdO9CINGb8c+q0RY2cYWHCZR0DqSeM
+OLaeNcoDTqQ4I4gUvzn92WWsHemvtOFX1o28N3OkIEqXWVVcqqGa2AFjBdYFN6np
+O7G6Kc7zJ6w2QZIfuUR9kUH2mQIlipz82U6Y30BGQnrtCw9F3JX2ALYb8qBXQmfJ
+WKggrCPDk+a/jDtJAjaJ2U7VLPC+jhPHWCxS1fHKwgR58QNEuJLfhrPnrthii5vK
+SQfQ2HibO2m3FVWyrZP3cK9Xke5kvXZKer/b7Kb+2C6xWCBx01VPH31kpstxZf/w
+1OG2e0mkp39UG6oZ2wGbIyIZ1Gh4il8vHGw21W4WGjYJAe8/lcPeriDj3B7ZD7Wc
+82YOE8PdqkZ/AlalFFySBAZ+C7STMawUwDdZznmKU/t4SpvsrTXJN9yZ8YLWbRM1
+TJn7f89hzB3YQHGhGiKazsdCbMigqBnpSQe8F/ahvjQICdTqrXPKV/MJTAc+HCF9
+z5Yfy06+31+eBrKoWxHt
+=qQcK
 -----END PGP SIGNATURE-----
