@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=>=dev-perl/Net-SSLeay-1.330.0 virtual/perl-Scalar-List-Utils idn? ( || ( >=dev-perl/URI-1.50 dev-perl/Net-LibIDN ) ) virtual/perl-ExtUtils-MakeMaker dev-lang/perl:=[-build(-)]
+DESCRIPTION=Nearly transparent SSL encapsulation for IO::Socket::INET
+EAPI=5
+HOMEPAGE=http://search.cpan.org/dist/IO-Socket-SSL/
+IUSE=idn
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~x86-interix ~amd64-linux ~arm-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
+LICENSE=|| ( Artistic GPL-1+ )
+RDEPEND=>=dev-perl/Net-SSLeay-1.330.0 virtual/perl-Scalar-List-Utils idn? ( || ( >=dev-perl/URI-1.50 dev-perl/Net-LibIDN ) ) dev-lang/perl:=[-build(-)]
+SLOT=0
+SRC_URI=mirror://cpan/authors/id/S/SU/SULLR/IO-Socket-SSL-2.012.tar.gz
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	6b84915e66050718c89bcbc76c144e80	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	unpacker	f300a7ca9131b1024a79762e8edd3c52
+_md5_=89e9d20889794f06340f06b4f4bd1a15
