@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=dev-perl/Carp-Clan dev-perl/Class-Load dev-perl/Data-Visitor >=dev-perl/DateTime-0.51 dev-perl/DateTime-Format-Strptime >=dev-perl/Devel-StackTrace-1.21 virtual/perl-Digest-SHA virtual/perl-Encode dev-perl/HTML-Parser dev-perl/HTTP-Message >=dev-perl/IO-Socket-SSL-2.5.0 dev-perl/JSON dev-perl/LWP-Protocol-https virtual/perl-Scalar-List-Utils >=dev-perl/Moose-0.94 dev-perl/MooseX-Role-Parameterized dev-perl/Net-HTTP virtual/perl-libnet >=dev-perl/Net-OAuth-0.25 virtual/perl-Time-HiRes >=dev-perl/Try-Tiny-0.03 >=dev-perl/URI-1.40 dev-perl/namespace-autoclean virtual/perl-Module-Build test? ( virtual/perl-Carp virtual/perl-File-Spec virtual/perl-File-Temp dev-perl/libwww-perl dev-perl/Test-Fatal virtual/perl-Test-Simple dev-perl/Test-Warn ) dev-lang/perl:=[-build(-)]
+DESCRIPTION=A perl interface to the Twitter API
+EAPI=5
+HOMEPAGE=http://search.cpan.org/dist/Net-Twitter/
+IUSE=test
+KEYWORDS=~amd64 ~x86 ~x64-macos
+LICENSE=|| ( Artistic GPL-1+ )
+RDEPEND=dev-perl/Carp-Clan dev-perl/Class-Load dev-perl/Data-Visitor >=dev-perl/DateTime-0.51 dev-perl/DateTime-Format-Strptime >=dev-perl/Devel-StackTrace-1.21 virtual/perl-Digest-SHA virtual/perl-Encode dev-perl/HTML-Parser dev-perl/HTTP-Message >=dev-perl/IO-Socket-SSL-2.5.0 dev-perl/JSON dev-perl/LWP-Protocol-https virtual/perl-Scalar-List-Utils >=dev-perl/Moose-0.94 dev-perl/MooseX-Role-Parameterized dev-perl/Net-HTTP virtual/perl-libnet >=dev-perl/Net-OAuth-0.25 virtual/perl-Time-HiRes >=dev-perl/Try-Tiny-0.03 >=dev-perl/URI-1.40 dev-perl/namespace-autoclean dev-lang/perl:=[-build(-)]
+SLOT=0
+SRC_URI=mirror://cpan/authors/id/M/MM/MMIMS/Net-Twitter-4.01008.tar.gz
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	6b84915e66050718c89bcbc76c144e80	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	unpacker	f300a7ca9131b1024a79762e8edd3c52
+_md5_=4235bc97b8319b5716fd572ab4fbff97
