@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/IO-Socket-SSL
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Socket-SSL/ChangeLog,v 1.217 2015/01/31 13:32:25 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Socket-SSL/ChangeLog,v 1.218 2015/02/23 23:44:29 dilfridge Exp $
+
+*IO-Socket-SSL-2.12.0 (23 Feb 2015)
+
+  23 Feb 2015; Andreas K. Huettel <dilfridge@gentoo.org>
+  +IO-Socket-SSL-2.12.0.ebuild:
+  Version bump
 
   31 Jan 2015; Mikle Kolyada <zlogene@gentoo.org> IO-Socket-SSL-1.967.0.ebuild:
   alpha/ia64/sparc stable wrt bug #535200
